--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Welcome to the Vast</h1>
-        <img src="images/paris-art.jpg" alt="Pencilled drawing of girl">
+        <img src="KRStoddard.github.io/images/paris-art.jpg" alt="Pencilled drawing of girl">
         <h2>An Explanation</h2>
         <p> I am attempting to learn coding. As such, this is my first webpage. Obviously it will be improved upon as I learn more.</p>
         <p>Things I have learned so far:</p>
