--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Javascript coding</li>
             <li>Pretty much anything else involved with HTML</li>
         </ol>
-        <p>Soon I will be able to make<a href="https://sleepingwithdragons.tumblr.com/" target="_blank"> my personal blog</a> a lot more attractive using these skills. </p>
+        <p>Soon I will be able to make<a href="https://sleepingwithdragons.tumblr.com/" target="_blank" title="Tumblr"> my personal blog</a> a lot more attractive using these skills. </p>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
